tests/array_type_infer_failure/error.txt
Validation error: ./tests/array_type_infer_failure/array_type_infer_failure.fae, line 4: Cannot infer array type from untyped number first item
  4|     let _: []i32 = []{ 1, 2 }
                            ^

Validation error: ./tests/array_type_infer_failure/array_type_infer_failure.fae, line 5: Cannot infer array type from untyped number first item
  5|     let _: []f32 = []{ 1.0, 2 }
                            ^^^

Validation error: ./tests/array_type_infer_failure/array_type_infer_failure.fae, line 7: Cannot infer array type from untyped number first item
  7|     let _ = []{ 1, 2 }
                     ^

Validation error: ./tests/array_type_infer_failure/array_type_infer_failure.fae, line 8: Cannot infer array type from untyped number first item
  8|     let _ = []{ 1.0, 2 }
                     ^^^

Validation error: ./tests/array_type_infer_failure/array_type_infer_failure.fae, line 11: Cannot infer array type from empty array
  11|     let _: []u8 = []{ }
                        ^^^^^

Validation error: ./tests/array_type_infer_failure/array_type_infer_failure.fae, line 13: Cannot infer array type from empty array
  13|     let _ = []{ }
                  ^^^^^
